--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.20",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "aos": "^2.3.4",
     "axios": "^0.24.0",
     "react": "^17.0.2",
@@ -30,7 +31,7 @@
     "test": "craco test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+  "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -55,7 +56,7 @@
     "@types/react-autocomplete": "^1.8.6",
     "autoprefixer": "^9.8.8",
     "gh-pages": "^3.2.3",
-    "postcss": "^7.0.39",
-    "@tailwindcss/postcss7-compat": "^2.2.7"
+    "postcss": "^7.0.39"
+   
   }
 }
